# RL-Legalizer

./: .gitmodules  CMakeLists.txt  README.md
include/: RLDP.h
rldp/: Cell_info.py  PPO.py  PPO_Masking.py  PPO_No_masking.py  PPO_No_masking_state.py  rldp.py  rldpPYTHON_wrap.cxx  test.py
rldp/benchmarks/des_perf_1/: placement.constraints
rldp/benchmarks/gcd_nangate45/: gcd_nangate45_global_place.def
rldp/data/: data.py
src/: Instance.cpp  RLDP.cpp  main.cpp  rldp.i
